--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--The head tag is where all the metadata(the information about your html file will go)-->
   <head>
     <!--The title tag is pretty self-explanatory. This information is displayed at the top of the page in the html file.-->
-    <title>Hand in Hand - Web Development</title>
+    <title>XD5000</title>
   </head>
   <!--The body tag is where we add new things that will make your html page interesting!-->
   <body>
