--- a/styled/index.html
+++ b/styled/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+F<!DOCTYPE html>
 
 <html>
   <head>
-    <title>Styled</title>
+    <title>Apex F1</title>
 
     <!--Including the CSS style sheet so that we can make this page look better-->
     <link rel="stylesheet" href="index.css" />
